# mantid

./: CMakeLists.txt
Framework/API/src/: MultipleFileProperty.cpp
Framework/Algorithms/src/: ConjoinXRuns.cpp  FilterEvents.cpp  MagFormFactorCorrection.cpp  Q1DWeighted.cpp
Framework/Algorithms/src/SampleCorrections/: SparseInstrument.cpp
Framework/Crystal/src/: IndexPeaks.cpp  LoadIsawPeaks.cpp  SCDCalibratePanels.cpp
Framework/CurveFitting/src/Algorithms/: EstimateFitParameters.cpp
Framework/CurveFitting/src/FuncMinimizers/: DTRSMinimizer.cpp
Framework/CurveFitting/src/Functions/: Polynomial.cpp
Framework/DataHandling/src/: LoadFullprofResolution.cpp  LoadMask.cpp  LoadSpiceXML2DDet.cpp  SaveAscii2.cpp
Framework/DataObjects/src/: PeaksWorkspace.cpp
Framework/Geometry/src/Math/: Acomp.cpp
Framework/PythonInterface/plugins/algorithms/: LiquidsReflectometryReduction.py
Framework/WorkflowAlgorithms/src/: SetupEQSANSReduction.cpp
MantidPlot/: CMakeLists.txt
MantidPlot/src/: AxesDialog.cpp  ConfigDialog.cpp  ContourLinesEditor.cpp  Graph.cpp  Matrix.cpp  MultiLayer.cpp  Plot.cpp  Plot.h  PlotTick.cpp  PlotTick.h  ProjectSerialiser.cpp  ScriptingWindow.cpp  Spectrogram.cpp  Table.cpp  TableStatistics.cpp  importOPJ.cpp  muParserScript.cpp
MantidPlot/src/Mantid/: AlgorithmHistoryWindow.cpp  AlgorithmMonitor.cpp  FirstTimeSetup.cpp  FitParameterTie.cpp  InputHistory.cpp  MantidMatrix.cpp  MantidMatrixExtensionRequest.cpp  MantidUI.cpp  SampleLogDialogBase.cpp
MantidPlot/src/origin/: OPJFile.cpp
buildconfig/CMake/: CommonSetup.cmake  FindPyUnitTest.cmake  SipTargets.cmake  sipmodule_template.sip.in
docs/source/fitfunctions/: Polynomial.rst
qt/: CMakeLists.txt
qt/applications/workbench/: CMakeLists.txt  README.md  setup.py  setup.py.in
qt/applications/workbench/app/: __init__.py  mainwindow.py
qt/applications/workbench/config/: main.py  user.py
qt/applications/workbench/config/tests/: __init__.py
qt/applications/workbench/workbench/: __init__.py  requirements.py  version.py.in
qt/applications/workbench/workbench/app/: mainwindow.py
qt/applications/workbench/workbench/config/: main.py  user.py
qt/applications/workbench/workbench/config/tests/: userconfig_test.py
qt/paraview_ext/PVPlugins/Readers/NexusPeaksReader/: vtkNexusPeaksReader.cxx
qt/paraview_ext/VatesAlgorithms/src/: SaveMDWorkspaceToVTKImpl.cpp
qt/paraview_ext/VatesSimpleGui/ViewWidgets/src/: PeaksTableControllerVsi.cpp  PeaksWidget.cpp  SplatterPlotView.cpp  pqCameraReactionNonOrthogonalAxes.cpp
qt/python/: CMakeLists.txt
qt/python/mantidqt/: __init__.py  py3compat.py
qt/python/mantidqt/qtpy/: __init__.py  compat.py
qt/python/mantidqt/tests/: import_test.py
qt/python/mantidqt/widgets/: __init__.py
qt/python/mantidqt/widgets/common/: __init__.py
qt/python/mantidqt/widgets/common/sip/: CMakeLists.txt  MantidDesktopServices.sip  _common.sip  sipmodule_template.sip.in
qt/python/mantidqt/widgets/common/tests/: desktopservices_test.py
qt/python/mantidqt/widgets/sip/: CMakeLists.txt  MantidDesktopServices.sip
qt/python/mantidqt/widgets/tests/: desktopservices_test.py
qt/python/mantidqtpython/: CMakeLists.txt  mantidqtpython_def.sip
qt/scientific_interfaces/EnggDiffraction/: EnggDiffFittingPresenter.cpp  EnggDiffractionPresenter.cpp
qt/scientific_interfaces/General/: DataComparison.cpp  StepScan.cpp
qt/scientific_interfaces/ISISReflectometry/: QtReflRunsTabView.cpp  QtReflSaveTabView.cpp  ReflLegacyTransferStrategy.cpp  ReflMeasureTransferStrategy.cpp  ReflRunsTabPresenter.cpp  ReflSaveTabPresenter.cpp  ReflSearchModel.cpp  ReflTableSchema.cpp
qt/scientific_interfaces/ISISSANS/: SANSAddFiles.cpp  SANSRunWindow.cpp
qt/scientific_interfaces/Indirect/: ConvFit.cpp  DensityOfStates.cpp  Elwin.cpp  IndirectCorrections.cpp  IndirectDataAnalysis.cpp  IndirectDataReduction.cpp  IqtFit.cpp  JumpFit.cpp  MSDFit.cpp
qt/scientific_interfaces/MultiDatasetFit/: MDFAddWorkspaceDialog.cpp  MDFDataController.cpp  MDFEditLocalParameterDialog.cpp  MDFFunctionPlotData.cpp  MultiDatasetFit.cpp
qt/scientific_interfaces/Muon/: ALCBaselineModellingModel.cpp  ALCDataLoadingPresenter.cpp  ALCInterface.cpp  MuonAnalysisHelper.cpp  MuonAnalysisResultTableTab.cpp
qt/widgets/common/: CMakeLists.txt
qt/widgets/common/src/: AlgorithmDialog.cpp  AlgorithmPropertiesWidget.cpp  BatchAlgorithmRunner.cpp  CatalogHelper.cpp  CatalogSearch.cpp  DisplayCurveFit.cpp  DoubleSpinBox.cpp  FitOptionsBrowser.cpp  FitPropertyBrowser.cpp  FunctionBrowser.cpp  HintingLineEdit.cpp  IndirectInstrumentConfig.cpp  InstrumentSelector.cpp  ListPropertyWidget.cpp  MWRunFiles.cpp  ManageUserDirectories.cpp  MantidTreeWidget.cpp  MantidWSIndexDialog.cpp  MdPlottingCmapsProvider.cpp  MuonFitPropertyBrowser.cpp  OptionsPropertyWidget.cpp  PeriodicTableWidget.cpp  PreviewPlot.cpp  PropertyHandler.cpp  PropertyWidget.cpp  RepoModel.cpp  SaveWorkspaces.cpp  SelectFunctionDialog.cpp  WorkspaceSelector.cpp
qt/widgets/common/src/DataProcessorUI/: GenericDataProcessorPresenter.cpp  QDataProcessorWidget.cpp  QtDataProcessorOptionsDialog.cpp  TwoLevelTreeManager.cpp
qt/widgets/common/src/WorkspacePresenter/: QWorkspaceDockView.cpp
qt/widgets/factory/src/: WidgetFactory.cpp
qt/widgets/instrumentview/src/: CompAssemblyActor.cpp  GLActorCollection.cpp  InstrumentWidgetMaskTab.cpp  InstrumentWidgetPickTab.cpp  MaskBinsData.cpp  PanelsSurface.cpp  PeakOverlay.cpp  ProjectionSurface.cpp  RotationSurface.cpp  StructuredDetectorActor.cpp  UnwrappedSurface.cpp
qt/widgets/plugins/algorithm_dialogs/src/: LoadDialog.cpp  PlotAsymmetryByLogValueDialog.cpp  SortTableWorkspaceDialog.cpp  StartLiveDataDialog.cpp
qt/widgets/sliceviewer/src/: CompositePeaksPresenter.cpp  ConcretePeaksPresenter.cpp  PeaksViewer.cpp  PeaksWorkspaceWidget.cpp  SliceViewer.cpp
qt/widgets/spectrumviewer/src/: SVConnections.cpp  SpectrumView.cpp
scripts/SANS/: SANSUtility.py
(+7 files in other folders)
